--- a/src/components/todo-components/todo.style.css
+++ b/src/components/todo-components/todo.style.css
@@ -5,10 +5,18 @@
     
 
 }
+.todo-list {
+    list-style-type: upper-roman;
+}
 
 .todo-form input {
     width: 80vw;
     height: 10vh;
     font-size: x-large;
+    border-radius: 10px;
+}
+button {
+    width: 10vw;
+    height: 10vh;
     border-radius: 10px;
 }
