--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+a {
+  
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  text-decoration: none;
+  background-color:coral;
+  transition: ease-in 0.5s;
+}
 .app-component {
   align-items: center;
 }
