--- a/src/components/markdown-components/markdown.css
+++ b/src/components/markdown-components/markdown.css
@@ -1,12 +1,13 @@
 .markdown-block {
     text-align: center;
 }
-
 textarea {
-    width: 70vw;
-    height: 30vh;
     font-size: 30px;
 }
 .output-block {
+    font-size: 30px;
+}
+
+.output-text {
     font-size: 30px;
 }
