--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -1,28 +1,15 @@
-
-.header {
-    display: flex;
-    height: 50px;
-}
-
 .brand-title{
-    margin-left: 100px;
-    font-size: 30px;    
+  margin-left: 100px;
+  font-size: 30px;    
 }
-.brand-title a{
-    color:white;
+.brand-title{
+  color: white;
 }
-.header-items {
-    list-style: none;
-    display: flex;
-    margin-left: 200px;
-
+.header-items{
+  margin-right: auto;
+  margin-left: 200px;
 }
-.header-items li{
-    margin-left: 20px;
-    cursor: pointer;
-    font-size: 25px;
-}
-
 .header-items a{
-    color: white;
+  color: white;
+  font-size: 25px;
 }
